# note-manager-RUST

./: Cargo.toml  GENERAL_PROGRAMMING_NOTES.md  LICENSE  README.md
src/: main.rs
src/tests/: integration_tests.rs
