[package]
name = "note-manager-RUST"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
reqwest = { version = "0.11", features = ["json"] } # HTTP client
pulldown-cmark = "0.9"  # Markdown processing
tokio = { version = "1", features = ["full"] } # Async runtime
assert_cmd = "2.0"




